fixing some more alignment on mobile

--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -97,7 +97,7 @@
 
   .page__meta {
     margin: 0 0 6px;
-    font-size: 0.67em;
+    font-size: $type-size-7;
   }
 }
 
@@ -111,7 +111,7 @@
 
   .page__meta {
     margin: 0 0 4px;
-    font-size: 0.67em;
+    font-size: $type-size-7;
   }
 
   .archive__item-title {
